# LBT_HW_1_ENCLAVES

./: README.md
enclave/: dune-project  enclave.opam
enclave/lib/: ast.ml  dune  env.ml  envList.ml  interpreter.ml  security.ml
enclave/test/: dune
